--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1> Testing Git </h1>
-        <p> We are testing git now.</p>
+        <p> 23-03-2023</p>
+        <p> We are testing git now 2.</p>
         <script src="" async defer></script>
     </body>
 </html>
