--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1> Testing Git </h1>
-        <p> 23-03-203</p>
-        <p> We are testing git now 2.</p>
-        <p> We are testing git now 3.</p>
+    <h1> Testing Git </h1>
+    <p> 23-03-203</p>
+    <p> We are testing git now 2.</p>
+    <p> We are testing git now 3.</p>
+    <footer>
+        <p>This is footer</p>
+    </footer>
+    <script src="" async defer></script>
+</body>
 
-        <script src="" async defer></script>
-    </body>
 </html>
