--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <footer>
         <p>This is footer</p>
     </footer>
+    <footer>
+        <p>This is the second footer</p>
+    </footer>
     <script src="" async defer></script>
 </body>
 
