--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>This is footer</p>
     </footer>
     <footer>
-        <p>This is the second footer</p>
+        <p>This is the  footer</p>
     </footer>
     <script src="" async defer></script>
 </body>
